Lesson 3 final commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>INSERT YOUR NAME</title>
+    <title>Matthew Forum</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 3 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Matthew Forum</h3>
             </div>
         </div>
     </header>
@@ -81,9 +81,9 @@
         <div class="featurette" id="topic1">
             <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Version Control</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Version control is a system of file sharing that programmers use so that one html code file can be edited at the same time by multiple individuals. One of the main reasons this method is used is because without it, code cant be edited by multiple people at the same time creating a huge dilemma for projects that require individuals to edit a specific part of the code. It is similar to a library where an individual checks out a file, edits the file, and then returns the edited file to the server. This topic helps us in this course, because it allows us to work as a group on certain projects and save time by working collaboratively. </p>
         </div>
 
         <hr class="featurette-divider">
